add: section to read the description and make notes + commments on observations

--- a/Exploratory_Data_Analysis_(Do_we_know_our_data).ipynb
+++ b/Exploratory_Data_Analysis_(Do_we_know_our_data).ipynb
@@ -212,92 +212,16 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "OH3OVpoBJRtl"
+    "id": "Mm5EsDitJXgQ"
    },
    "source": [
-    "#### Peek at Your Data\n",
-    "Looking at the raw data can reveal insights that you cannot get any other way.\n",
+    "####  Get familiar with columns\n",
+    "Go through the dataset description. Have some thoughts about which features might be related, what meaning they have, what impact they might have on target variable.\n",
     "\n",
-    "Subsets of data from the head or tail of the dataset can be helpful."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 449
-    },
-    "colab_type": "code",
-    "id": "D8ZA1ghXGNAS",
-    "outputId": "5b9bc6a3-2302-409e-8683-dd7171650bfd"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      crim    zn  indus  chas    nox     rm    age     dis  rad    tax  \\\n",
-      "0  0.00632  18.0   2.31     0  0.538  6.575   65.2  4.0900    1  296.0   \n",
-      "1  0.02731   0.0   7.07     0  0.469  6.421   78.9  4.9671    2  242.0   \n",
-      "2  0.02729   0.0   7.07     0  0.469  7.185   61.1  4.9671    2  242.0   \n",
-      "3  0.03237   0.0   2.18     0  0.458  6.998   45.8  6.0622    3  222.0   \n",
-      "4  0.06905   0.0   2.18     0  0.458  7.147   54.2  6.0622    3  222.0   \n",
-      "5  0.02985   0.0   2.18     0  0.458  6.430   58.7  6.0622    3  222.0   \n",
-      "6  0.08829  12.5   7.87     0  0.524  6.012   66.6  5.5605    5  311.0   \n",
-      "7  0.14455  12.5   7.87     0  0.524  6.172   96.1  5.9505    5  311.0   \n",
-      "8  0.21124  12.5   7.87     0  0.524  5.631  100.0  6.0821    5  311.0   \n",
-      "9  0.17004  12.5   7.87     0  0.524  6.004   85.9  6.5921    5  311.0   \n",
-      "\n",
-      "   ptratio       b  lstat  medv  \n",
-      "0     15.3  396.90   4.98  24.0  \n",
-      "1     17.8  396.90   9.14  21.6  \n",
-      "2     17.8  392.83   4.03  34.7  \n",
-      "3     18.7  394.63   2.94  33.4  \n",
-      "4     18.7  396.90   5.33  36.2  \n",
-      "5     18.7  394.12   5.21  28.7  \n",
-      "6     15.2  395.60  12.43  22.9  \n",
-      "7     15.2  396.90  19.15  27.1  \n",
-      "8     15.2  386.63  29.93  16.5  \n",
-      "9     15.2  386.71  17.10  18.9  \n",
-      "\n",
-      "        crim   zn  indus  chas    nox     rm   age     dis  rad    tax  \\\n",
-      "496  0.28960  0.0   9.69     0  0.585  5.390  72.9  2.7986    6  391.0   \n",
-      "497  0.26838  0.0   9.69     0  0.585  5.794  70.6  2.8927    6  391.0   \n",
-      "498  0.23912  0.0   9.69     0  0.585  6.019  65.3  2.4091    6  391.0   \n",
-      "499  0.17783  0.0   9.69     0  0.585  5.569  73.5  2.3999    6  391.0   \n",
-      "500  0.22438  0.0   9.69     0  0.585  6.027  79.7  2.4982    6  391.0   \n",
-      "501  0.06263  0.0  11.93     0  0.573  6.593  69.1  2.4786    1  273.0   \n",
-      "502  0.04527  0.0  11.93     0  0.573  6.120  76.7  2.2875    1  273.0   \n",
-      "503  0.06076  0.0  11.93     0  0.573  6.976  91.0  2.1675    1  273.0   \n",
-      "504  0.10959  0.0  11.93     0  0.573  6.794  89.3  2.3889    1  273.0   \n",
-      "505  0.04741  0.0  11.93     0  0.573  6.030  80.8  2.5050    1  273.0   \n",
-      "\n",
-      "     ptratio       b  lstat  medv  \n",
-      "496     19.2  396.90  21.14  19.7  \n",
-      "497     19.2  396.90  14.10  18.3  \n",
-      "498     19.2  396.90  12.92  21.2  \n",
-      "499     19.2  395.77  15.10  17.5  \n",
-      "500     19.2  396.90  14.33  16.8  \n",
-      "501     21.0  391.99   9.67  22.4  \n",
-      "502     21.0  396.90   9.08  20.6  \n",
-      "503     21.0  396.90   5.64  23.9  \n",
-      "504     21.0  393.45   6.48  22.0  \n",
-      "505     21.0  396.90   7.88  11.9  \n",
-      "\n",
-      "The first column lists the row number, which is handy for referencing a specific observation.\n"
-     ]
-    }
-   ],
-   "source": [
-    "peek = data.head(10)\n",
-    "print(peek)\n",
-    "print()\n",
-    "peek = data.tail(10)\n",
-    "print(peek)\n",
-    "print()\n",
-    "print(\"The first column lists the row number, which is handy for referencing a specific observation.\")"
+    "- Medv is our price that we will try to predict\n",
+    "- Some information about type of area (residential / industrial), former has probably a positive impact to price contrary to latter.\n",
+    "- Those features about criminality, nitric oxides (pollution?), LSTAT (social class?) should have a negative impact.\n",
+    "- etc..."
    ]
   },
   {
@@ -313,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -328,23 +252,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(rows, columms) =  (506, 14)\n",
-      "\n",
-      "Rows: too few rows mean you don't have enough data for your algoritms to train\n",
-      "      too many rows mean your training process will take long\n",
-      "Columns / features: too few columns/features again will have an impact on generalising or usefulness of the model\n",
-      "      too many columns/featurs could cause training performance to suffer, and does not mean better accuracy\n"
+      "(rows, columms) =  (506, 14)\n"
      ]
     }
    ],
    "source": [
     "shape = data.shape\n",
-    "print(\"(rows, columms) = \", shape)\n",
+    "print(\"(rows, columms) = \", shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "Mm5EsDitJXgQ"
+   },
+   "source": [
+    "Rows: \n",
+    "-       too few rows mean you might not have enough data for your algoritms to train\n",
+    "-       too many rows mean your training process will take long\n",
+    "\n",
+    "Columns / features:\n",
+    "-       too few columns/features again will have an impact on generalising or usefulness of the model\n",
+    "-       too many columns/featurs could cause training performance to suffer, and does not mean better accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "OH3OVpoBJRtl"
+   },
+   "source": [
+    "#### Peek at Your Data\n",
+    "Looking at the raw data can reveal insights that you cannot get any other way.\n",
+    "\n",
+    "Subsets of data from the head or tail of the dataset can be helpful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 449
+    },
+    "colab_type": "code",
+    "id": "D8ZA1ghXGNAS",
+    "outputId": "5b9bc6a3-2302-409e-8683-dd7171650bfd"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    crim    zn  indus  chas    nox     rm    age    dis  rad    tax  ptratio       b  lstat  medv\n",
+      "0  0.006  18.0   2.31     0  0.538  6.575   65.2  4.090    1  296.0     15.3  396.90   4.98  24.0\n",
+      "1  0.027   0.0   7.07     0  0.469  6.421   78.9  4.967    2  242.0     17.8  396.90   9.14  21.6\n",
+      "2  0.027   0.0   7.07     0  0.469  7.185   61.1  4.967    2  242.0     17.8  392.83   4.03  34.7\n",
+      "3  0.032   0.0   2.18     0  0.458  6.998   45.8  6.062    3  222.0     18.7  394.63   2.94  33.4\n",
+      "4  0.069   0.0   2.18     0  0.458  7.147   54.2  6.062    3  222.0     18.7  396.90   5.33  36.2\n",
+      "5  0.030   0.0   2.18     0  0.458  6.430   58.7  6.062    3  222.0     18.7  394.12   5.21  28.7\n",
+      "6  0.088  12.5   7.87     0  0.524  6.012   66.6  5.561    5  311.0     15.2  395.60  12.43  22.9\n",
+      "7  0.145  12.5   7.87     0  0.524  6.172   96.1  5.950    5  311.0     15.2  396.90  19.15  27.1\n",
+      "8  0.211  12.5   7.87     0  0.524  5.631  100.0  6.082    5  311.0     15.2  386.63  29.93  16.5\n",
+      "9  0.170  12.5   7.87     0  0.524  6.004   85.9  6.592    5  311.0     15.2  386.71  17.10  18.9\n",
+      "\n",
+      "The first column lists the row number, which is handy for referencing a specific observation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "peek = data.head(10)\n",
+    "print(peek)\n",
     "print()\n",
-    "print(\"Rows: too few rows mean you don't have enough data for your algoritms to train\")\n",
-    "print(\"      too many rows mean your training process will take long\")\n",
-    "print(\"Columns / features: too few columns/features again will have an impact on generalising or usefulness of the model\")\n",
-    "print(\"      too many columns/featurs could cause training performance to suffer, and does not mean better accuracy\")"
+    "print(\"The first column lists the row number, which is handy for referencing a specific observation.\")"
    ]
   },
   {
@@ -413,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -428,8 +411,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Names of columns Index(['crim', 'zn', 'indus', 'chas', 'nox', 'rm', 'age', 'dis', 'rad', 'tax',\n",
-      "       'ptratio', 'b', 'lstat', 'medv'],\n",
+      "Names of columns Index(['crim', 'zn', 'indus', 'chas', 'nox', 'rm', 'age', 'dis', 'rad', 'tax', 'ptratio', 'b',\n",
+      "       'lstat', 'medv'],\n",
       "      dtype='object')\n",
       "\n",
       "Overview of values as an array [[6.3200e-03 1.8000e+01 2.3100e+00 ... 3.9690e+02 4.9800e+00 2.4000e+01]\n",
@@ -439,8 +422,6 @@
       " [6.0760e-02 0.0000e+00 1.1930e+01 ... 3.9690e+02 5.6400e+00 2.3900e+01]\n",
       " [1.0959e-01 0.0000e+00 1.1930e+01 ... 3.9345e+02 6.4800e+00 2.2000e+01]\n",
       " [4.7410e-02 0.0000e+00 1.1930e+01 ... 3.9690e+02 7.8800e+00 1.1900e+01]]\n",
-      "\n",
-      "Shape of the dataset (506, 14)\n",
       "\n"
      ]
     }
@@ -449,8 +430,6 @@
     "print(\"Names of columns\", data.columns)   # column names (which is “an index”)\n",
     "print()\n",
     "print(\"Overview of values as an array\", data.values)    # underlying numpy array — df are stored as numpy arrays for effeciencies.\n",
-    "print()\n",
-    "print(\"Shape of the dataset\", data.shape)\n",
     "print()"
    ]
   },
@@ -717,6 +696,16 @@
     "print(\"It is worth taking some time and reviewing observations from the results.\")\n",
     "print(\"This might include the presence of “NA” values for missing data or surprising distributions for attributes.\")\n",
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "0_xLQ4EMLJxn"
+   },
+   "source": [
+    "crim and zn have large outliers  (max value against mean and 75% percentile)"
    ]
   },
   {
