add observations on distributions

--- a/Exploratory_Data_Analysis_(Do_we_know_our_data).ipynb
+++ b/Exploratory_Data_Analysis_(Do_we_know_our_data).ipynb
@@ -1362,6 +1362,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">>\n",
+    "we can already see multiple obvious correlations between each feature and the price.\n",
+    "\n",
+    ">>\n",
+    "some linear:\n",
+    "- nb of rooms\n",
+    "\n",
+    ">>\n",
+    "more complex:\n",
+    "- criminality \n",
+    "- proportion of non retail businesses\n",
+    "- percentage of lower status of the population\n",
+    "\n",
+    ">> \n",
+    "some with no correlation:\n",
+    "- proportion of owner occupied units built prioer to 1940\n",
+    "- index of accessibility to radial highways\n",
+    ">>\n",
+    "etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "Ck3LgHNHKCf5"
